# networkxr

./: 404.html  Cargo.toml  README.md  index.html  llm.txt  pyproject.toml  schema.json  search.json  sitemap.xml  zensical.toml
api-reference/: index.html
api/convert/: index.html
api/digraph/: index.html
api/exceptions/: index.html
api/generators/: index.html
api/graph/: index.html
api/multigraph/: index.html
api/relabel/: index.html
api/utils/: index.html
architecture/: index.html
changelog/: index.html
docs/: api-reference.md  changelog.md  plotting.md  schema.json
docs/cookbook/: generators.md  plotting.md
getting-started/: index.html
networkxr/: __init__.py  isomorphism.py
networkxr/classes/: digraph.py  graph.py  views.py
networkxr/drawing/: nx_plotly.py
src/: accel.rs
tests/: test_drawing.py  test_properties.py
